syntax = "proto3";

option go_package = "github.com/tasjen/message-app-fullstack/services/auth/internal/auth_proto";

service Auth {
  rpc VerifyToken (AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  string provider_id = 1;
  string provider_name = 2;
}